--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
     <script>
         // ¡CAMBIA ESTA VARIABLE POR LA URL DE TU WORKER DE CLOUDFLARE!
-        const PROXY_URL = 'https://cardano-dex-proxy.seryibull.workers.dev/';
+        const PROXY_URL = 'https://cardano-dex-proxy.seryibull.workers.dev';
 
         async function fetchAdaPrice() {
             try {
